[tool.poetry]
name = "fastapi_study"
version = "0.1.0"
description = ""
authors = ["watarukura <what.r.j150@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
sqlalchemy = "^1.3.19"
pymysql = "^0.10.0"
alembic = "^1.4.2"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.782"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
isort = "^5.5.1"
flake8 = "^3.8.3"
tox = "^3.20.0"

[tool.black]
line-length = 79
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

